<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addressViewModel"
            type="com.example.dropittest.address.AddressViewModel" />

        <variable
            name="dropViewModel"
            type="com.example.dropittest.main.DropViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".address.AddressFragment">

        <TextView
            android:id="@+id/instruction_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/enter_below_your_address_details"
            android:layout_marginTop="80dp"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/edit_texts_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <EditText
            android:id="@+id/street_address_address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_texts_top"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/edit_text_green_bg"
            android:hint="@string/street_address_hint"
            android:text="@{addressViewModel.addressLiveData}"
            dropViewModel="@{dropViewModel}"/>

        <EditText
            android:id="@+id/city_address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/street_address_address_et"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:background="@drawable/edit_text_green_bg"
            android:hint="@string/city_hint"
            android:text="@{addressViewModel.addressLiveData}"
            dropViewModel="@{dropViewModel}"/>

        <Spinner
            android:id="@+id/country_address_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_address_et"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/green"
            android:hint="@string/city_hint"
            isoCountryCodes="@{addressViewModel.isoCodesLiveData}"
            address="@{addressViewModel.addressLiveData}"
            dropViewModel="@{dropViewModel}"/>

        <Button
            android:id="@+id/next_address_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next_button"
            android:textColor="@android:color/white"
            android:background="@drawable/button_black_bg"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>