<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dropViewModel"
            type="com.example.dropittest.main.DropViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".util.ErrorFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/title_error_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops_huston_we_ve_got_a_problem"
            app:layout_constraintTop_toTopOf="@+id/top_gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/green" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/no_signal_iv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@+id/middle_gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_no_signal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/check_internet_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/bottom_gl"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/please_check_your_internet_connection" />

        <TextView
            android:id="@+id/message_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/check_internet_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/error_message_title" />

        <TextView
            android:id="@+id/error_message_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/message_title_tv"
            app:layout_constraintBottom_toTopOf="@+id/refresh_error_button"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:background="@drawable/error_message_bg"
            tools:text="Time out"
            android:text="@{dropViewModel.errorMessageLiveData}"/>

        <Button
            android:id="@+id/refresh_error_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_black_bg"
            android:textColor="@color/white"
            android:text="@string/refresh_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>